--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "eslint . --ext .ts,.vue"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.5",
-    "@nuxt/image-edge": "1.0.0-28020728.5df24eb",
-    "@nuxt/types": "^2.16.3",
-    "@nuxtjs/tailwindcss": "^6.6.6",
+    "@antfu/eslint-config": "^0.39.7",
+    "@nuxt/image-edge": "1.0.0-rc.1-28143901.afe4120",
+    "@nuxt/types": "^2.17.1",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@types/node": "^20.4.2",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "graphql": "^16.6.0",
-    "nuxt": "^3.4.2",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.4"
+    "eslint": "^8.45.0",
+    "graphql": "^16.7.1",
+    "nuxt": "^3.6.3",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "0.9.67",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "graphql-request": "^6.0.0",
-    "prettier": "^2.8.7",
-    "sass": "^1.62.0",
-    "vue-google-maps-community-fork": "^0.3.1"
+    "eslint-plugin-prettier": "^5.0.0",
+    "graphql-request": "^6.1.0",
+    "prettier": "^3.0.0",
+    "sass": "^1.63.6"
   }
 }
